--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -109,10 +109,10 @@
         </div>
         <div class="clearfix">
             <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
-            <a href="#" class="pull-right text-success">Forgot Password?</a>
+            <a href="/SignUp/ForgotPassword" class="pull-right text-success">Forgot Password?</a>
         </div>
     </form>
-    <div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
+    <div class="hint-text small">Don't have an account? <a href="/SignUp" class="text-success">Register Now!</a></div>
 </div>
 </body>
 </html>
