--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -52,7 +52,7 @@
             <div class="sb-sidenav-menu">
 
                 <div class="profile-userpic">
-                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
