--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -7,11 +7,23 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Dashboard - SB Admin</title>
-    <link href="/css/User/userstyles.css" rel="stylesheet"/>
+        <link href="/css/User/userstyles.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
           crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
+               <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/Main/animate.css">
+    <link rel="stylesheet" href="/css/User/style.css">
+    <link rel="stylesheet" href="/css/Main/media-queries.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
             
    <style>
@@ -30,7 +42,7 @@
 }
 
 .bg-dark {
-    background-color: black;
+    background-color: black!important;
 }
    </style>
 </head>
@@ -43,36 +55,20 @@
           
             <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
         <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
-          <button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">
-           Log out
-        </button>
+          
+   <a href="http://localhost:8888/logout"><button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">Logout</button> </a>     
+
 
         </div>
         </nav>
-    <!-- Navbar-->
-    <ul class="navbar-nav ml-auto ml-md-0">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
-                <div class="dropdown-divider"></div>
-                <form class="dropdown-item" action="/logout" method="post">
-                    <input type="hidden" name="_csrf" value=""/>
-                    <button type="submit" class="btn btn-primary">Logout</button>
-                </form>
-            </div>
-        </li>
-    </ul>
-</nav>
+    
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                <div class="sb-sidenav-menu">
 
                 <div class="profile-userpic">
-                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
@@ -108,11 +104,7 @@
     </div>
     <div id="layoutSidenav_content">
         <main>
-            <div class="container-fluid">
-                <h1 class="mt-4">Userprofile</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">Userprofile</li>
-                </ol>
+            <div class="container-fluid" style="margin-top:1%;">
                 <div class="row">
                     <div class="col-xl-6">
                         <div class="card mb-4">
@@ -336,18 +328,7 @@
                 </div>
             </div>
         </main>
-        <footer class="py-4 bg-light mt-auto">
-            <div class="container-fluid">
-                <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Your Website 2020</div>
-                    <div>
-                        <a href="#">Privacy Policy</a>
-                        &middot;
-                        <a href="#">Terms &amp; Conditions</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
+    
     </div>
     
 <div class="modal" tabindex="-1" role="dialog" id="editModal">
@@ -453,6 +434,21 @@
     $(document).ready(function() {
         $('#dataTableProducts').DataTable();
     });
+
+     function clicked(){
+
+          var path = window.location.href; // because the 'href' property of the DOM element is the absolute path
+        $("#layoutSidenav_nav .sb-sidenav a.nav-link").each(function() {
+            if (this.href === path) {
+                $(this).addClass("active");
+            }
+        });
+
+
+
+      $("body").toggleClass("sb-sidenav-toggled");
+
+    }
 </script>
 </body>
 </html>
