--- a/src/main/resources/templates/Frontend/Main/Payment.mustache
+++ b/src/main/resources/templates/Frontend/Main/Payment.mustache
@@ -32,6 +32,13 @@
         .lh-condensed {
             line-height: 1.25;
         }
+
+        .truncateLongTexts {
+            width: 100px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis // This is where the magic happens
+        }
     </style>
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
           crossorigin="anonymous"/>
@@ -107,27 +114,70 @@
                                         <img src="{{productUrl}}" style="object-fit:cover; width:90px; height:60px;">
                                     </small>
                                     <div>
-                                        <h6 class="my-0">{{title}}</h6>
+                                        <h6 class="my-0 truncateLongTexts">{{title}}</h6>
+                                        <small class="text-muted">Price: {{price}}</small>
                                         <small class="text-muted">Quantity: {{quantity}}</small>
                                     </div>
-                                    <span class="text-muted">Price: {{price}}</span>
+                                    <div>
+                                        <h6 class="my-0 truncateLongTexts">
+                                            <a href="http://localhost:8888/Index/Payment/Remove/{{cartItemId}}"
+                                               type="button"
+                                               class="card-link-secondary small text-uppercase mr-3"><i
+                                                    class="fas fa-trash-alt mr-1"></i></a>
+                                        </h6>
+                                    </div>
+                                    <div>
+                                        <h6 class="my-0 truncateLongTexts"></h6>
+                                    </div>
                                 </li>
                                 {{/userCart}}
-                                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                                    <div>
-                                        <h6 class="my-0">Total {{order.total}}</h6>
-                                        <small class="text-muted">Total discount {{order.itemDiscount}}</small>
-                                    </div>
-                                    <h6 class="my-0">Grand Total:<span class="my-0" id="grandTotal">{{order.grandTotal}}</span> </h6>
+                                <li style="list-style: none">
+                                    <div class="mb-3">
+                                        <div class="pt-4">
 
+                                            <h5 class="mb-3">The total amount of</h5>
+
+                                            <ul class="list-group list-group-flush">
+                                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                                    Temporary amount (ex-moms)
+                                                    <span>{{orderData.subTotal}}</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                                    Moms
+                                                    <span>{{orderData.tax}}</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                                    Shipping
+                                                    <span>{{orderData.shipping}}</span>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center px-0 text-danger">
+                                                    Discount
+                                                    <span>{{orderData.itemDiscount}}</span>
+                                                </li>
+                                                <li id="promotion" class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0 text-danger">
+
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                                                    <div>
+                                                        <strong>The total amount of</strong>
+                                                        <strong>
+                                                            <p class="mb-0">(including VAT)</p>
+                                                        </strong>
+                                                    </div>
+                                                    <span><strong id="grandTotal">{{orderData.total}}</strong></span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
 
                             <form class="card p-2">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Promo code" id="promoId">
+                                    <input type="text" class="form-control" placeholder="Promo code" id="promoId" disabled>
                                     <div class="input-group-append">
-                                        <button type="button" class="btn btn-primary" onclick="promoValidation()">Redeem</button>
+                                        <button type="button" class="btn btn-primary" onclick="promoValidation()">
+                                            Redeem
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="input-group">
@@ -141,12 +191,12 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="firstName">First name</label>
-                                        <input type="text" class="form-control" id="firstName" placeholder="" value="{{order.firstName}}" name="firstName"
+                                        <input type="text" class="form-control" id="firstName" placeholder="" value="{{orderData.firstName}}" name="firstName"
                                                disabled>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="lastName">Last name</label>
-                                        <input type="text" class="form-control" id="lastName" placeholder="" value="{{order.lastName}}" name="lastName"
+                                        <input type="text" class="form-control" id="lastName" placeholder="" value="{{orderData.lastName}}" name="lastName"
                                                disabled>
                                     </div>
                                 </div>
@@ -158,7 +208,7 @@
                                             <span class="input-group-text">@</span>
                                         </div>
                                         <input type="text" class="form-control" id="username" placeholder="Username"
-                                               disabled value="{{order.email}}" name="userId">
+                                               disabled value="{{orderData.email}}" name="userId">
                                     </div>
                                 </div>
                                 <hr class="mb-4">
