--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Sign in Form with Social Login Buttons</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/Main/animate.css">
+    <link rel="stylesheet" href="/css/Main/style.css">
+    <link rel="stylesheet" href="/css/Main/media-queries.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <style>
         .btn-github{color:#fff;background-color:#444;border-color:rgba(0,0,0,0.2)}.btn-github:focus,.btn-github.focus{color:#fff;background-color:#2b2b2b;border-color:rgba(0,0,0,0.2)}
         .btn-github:hover{color:#fff;background-color:#2b2b2b;border-color:rgba(0,0,0,0.2)}
@@ -29,8 +35,10 @@
         .btn-facebook.disabled:hover,.btn-facebook[disabled]:hover,fieldset[disabled] .btn-facebook:hover,.btn-facebook.disabled:focus,.btn-facebook[disabled]:focus,fieldset[disabled] .btn-facebook:focus,.btn-facebook.disabled.focus,.btn-facebook[disabled].focus,fieldset[disabled] .btn-facebook.focus{background-color:#3b5998;border-color:rgba(0,0,0,0.2)}
         .btn-facebook .badge{color:#3b5998;background-color:#fff}
         .login-form {
-            width: 340px;
+            width: 450px;
             margin: 30px auto;
+            margin-top:0;
+            padding-top:8%;
         }
         .login-form form {
             margin-bottom: 15px;
@@ -79,13 +87,47 @@
         }
         .input-group-addon .fa{
             font-size: 18px;
+            padding-top:6px;
+            padding-right:9px;
+        }
+
+        .menu{
+            background-color:black;
         }
     </style>
 </head>
 <body>
+<nav>
+        <div class="menu-icon">
+
+            <div>
+
+            </div>
+
+            <i class="fa fa-bars fa-2x"></i>
+
+
+        </div>
+
+        <div class="logo">
+            <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png"
+                                                        width="100"/></a>
+        </div>
+
+
+        <div class="menu">
+            <ul>
+                <li><a href="http://localhost:8888/Index/Category/1">Backgrounds</a></li>
+                <li><a href="http://localhost:8888/Index/Category/2">Stockphotos</a></li>
+                <li><a href="http://localhost:8888/Index/Category/3">Posters</a></li>
+
+           
+            </ul>
+        </div>
+    </nav>
 <div class="login-form">
     <form action="/login" method="post">
-        <h2 class="text-center">Pikto Sign in</h2>
+        <h2 class="text-center">Sign in</h2>
         <div class="text-center social-btn">
             <a href="oauth2/authorization/facebook" class="btn btn-facebook btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>
             <a href="oauth2/authorization/github" class="btn btn-github btn-block"><i class="fa fa-github"></i> Sign in with <b>Github</b></a>
@@ -112,7 +154,82 @@
             <a href="/SignUp/ForgotPassword" class="pull-right text-success">Forgot Password?</a>
         </div>
     </form>
-    <div class="hint-text small">Don't have an account? <a href="/SignUp" class="text-success">Register Now!</a></div>
+    <div class="hint-text small">Don't have an account? <a href="#register" data-toggle="modal" class="text-success" data-target="#register">Sign up!</a></div>
 </div>
+
+
+<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+
+
+      <div class="login-form">
+    <form action="/SignUp/NewUser" method="post">
+        <h2 class="text-center">Sign up</h2>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">First name:</span>
+                <input type="text" class="form-control" name="firstName" placeholder="First name.." required="required" autocomplete="given-name">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">Last name:</span>
+                <input type="text" class="form-control" name="lastName" placeholder="Last name.." required="required" autocomplete="family-name">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">Mobile number:</span>
+                <input type="text" class="form-control" name="mobileNr" placeholder="Mobile nr.." required="required" autocomplete="tel">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                <input type="text" class="form-control" name="email" placeholder="Email/Username" required="required" autocomplete="username">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                <input type="password" class="form-control" name="password" placeholder="Password" required="required" autocomplete="new-password">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">Picture Url:</span>
+                <input type="text" class="form-control" name="pictureUrl" placeholder="pictureUrl" autocomplete="url">
+            </div>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-success btn-block login-btn">Sign Up</button>
+        </div>
+    </form>
+</div>  
+      </div>
+      
+    </div>
+  </div>
+</div>
+
 </body>
+<script src="/js/Main/jquery-3.3.1.min.js"></script>
+<script src="/js/Main/jquery-migrate-3.0.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+<script src="/js/Main/jquery.backstretch.min.js"></script>
+<script src="/js/Main/wow.min.js"></script>
+<script src="/js/Main/scripts.js"></script>
 </html>
